* Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Improved appearance of text logo option with "Entrepeneur" theme base.
* Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
* Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
* Fixed: Added missing breadcrumbs for bbPress user profiles.
* Fixed: Custom padding not applying to "popout" elements in Builder.
* Fixed: Widgets set as "panel" from theme options not displaying right with no widget title.
* Fixed: Issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
* Fixed: Blog display option not displaying "full content" when selected, instead of excerpts.
* Fixed: Slider option type not allowing you to inert images less than 200px wide. This was most evident when trying to use the Partner Logos element in the Builder and using small logo images.
* Fixed: When a layout section has repeating background set to parallax, it would get stretched on mobile.
* Fixed: Technorati image icon in social icons.
* Fixed: "Preview Changes" not working correctly when inserting current page's content into custom layout.
* Fixed: "Save as Draft" not working for custom layout pages.
* Fixed: Issues with "Blank Page" page template.
* The following functions have been deleted. These functions were simply action wrappers. For the most part, as long as you haven't (as suggested not to do) moved main template files header.php, footer.php, sidebar-right.php, or sidebar-left.php to your child theme, this shouldn't effect you.
	* `themeblvd_head()`
	* `themeblvd_before()`
	* `themeblvd_header_top()`
	* `themeblvd_header_above()`
	* `themeblvd_header_content()`
	* `themeblvd_header_menu()`
	* `themeblvd_header_after()`