@@ -5469,6 +5469,9 @@ blockquote small {
 	margin-bottom: 0;
 }
 .post_showcase .showcase-wrap > .row {
+	margin: 0 -5px;
+}
+.post_showcase.tb-isotope .showcase-wrap > .row {
 	margin: -5px;
 }
 .post_showcase .showcase-wrap > .row > .showcase-item {
@@ -5531,9 +5534,6 @@ blockquote small {
 }
 .post_showcase .entry-content p:last-child {
 	margin-bottom: 0;
-}
-.post_showcase.tb-isotope .showcase-wrap > .row {
-	margin: -5px;
 }
 
 /* Post Slider (inherits from .tb-simple-slider) */
